--- a/src/assets/style/cmps/app-footer.scss
+++ b/src/assets/style/cmps/app-footer.scss
@@ -2,7 +2,9 @@ footer {
     display: flex;
     align-items: center;
     height: 5vh;
-    
-    padding-inline: 10px;
-    background-color: lightblue;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    color: $clr3;
 }
