--- a/src/assets/style/cmps/app-header.scss
+++ b/src/assets/style/cmps/app-header.scss
@@ -1,13 +1,29 @@
-header {
+.app-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
     height: 5vh;
-    padding-inline: 10px;
-    background-color: lightblue;
+    margin-top: 30px;
 
     a {
-        margin-inline-start: 1em;
+        text-align: center;
+        padding: 20px 0;
+
+        &:hover {
+            background-color: lighten($clr1, 15%);
+        }
+    }
+
+    nav {
+        display: grid;
+        gap: 5px;
+        grid-template-columns: repeat(3, minmax(60px,80px));
+    }
+
+    .details {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        padding-top: 10px;
     }
 }
